Fixed the issues

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             </div>
             <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
                 <div class="icon-box">
-                    <img class="tech-icon" src="icons/C.png">
+                    <img class="tech-icon" src="icons/cprog.png">
                     <!-- <h3>C </h3> -->
                 </div>
             </div>
