--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <div id="about" class="container aboutme">
         <div class="row head text-center">
             <div class="col-lg-12">
-                <h1 style="font-style: italic;">About me</h1>
+                <h1 style="font-style: italic;">About</h1>
             </div>
         </div>
         <div class=" body row">
