Removed the AWS Pipeline changes

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <div class="col-lg-7">
                     <div class="jumbotron">
                         <h1 class="display-4">Hello!</h1>
-                        <h2 class="lead">I'm Siddharth Singh (AWS_CodePipeline_Check)</h2>
+                        <h2 class="lead">I'm Siddharth Singh</h2>
                         <!-- <h3>Student, Coder, Chess Player</h3> -->
                         <div id="text-write"></div>
                         <ul style="padding-left: 0px;">
