Added the jpg for sql icon | Modified the skills section to make it responsive

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
-    <title>Siddharth Singh</title>
+    <title>Siddharth Singh | Portfolio</title>
 </head>
 
 <body>
@@ -95,7 +95,7 @@
                         <tr>
                             <th scope="col"><i class="fa fa-graduation-cap" aria-hidden="true"></i></th>
                             <th scope="col" class="year">
-                                <p style="font-weight: bold;">B.Tech(Computer Science)</p>
+                                <p style="font-weight: bold;">B.Tech - Computer Science</p>
                                 <p>Shri G.S. Institute of Technology & Science, Indore</p>
                                 <p>C.G.P.A. - 8.30/10</p>
                                 <p style="font-style: italic;">Aug, 2019-Present</p>
@@ -127,58 +127,56 @@
             </div>
         </div>
     </section>
-    <div class="container">
-        <div class="row pt-5">
-            <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
-                <div class="icon-box">
+    <div class="container table-responsive">
+        <div class="row">
+            <div class="col-md-6 mx-auto">
+        <table class="table table-borderless">
+            <tbody>
+              <tr>
+                <td>
                     <img class="tech-icon" src="icons/java.png">
                     <!-- <h3>Java(Core)</h3> -->
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
-                <div class="icon-box">
+                </td>
+                <td>
                     <img class="tech-icon" src="icons/cprog.png">
                     <!-- <h3>C </h3> -->
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
-                <div class="icon-box">
+                </td>
+                <td>
                     <img class="tech-icon" src="icons/python.png">
                     <!-- <h3>Python</h3> -->
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
-                <div class="icon-box">
+                </td>
+              </tr>
+              <tr>
+                <td>
                     <img class="tech-icon" src="icons/html-5.png">
                     <!-- <h3>HTML</h3> -->
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
-                <div class="icon-box">
+                </td>
+                <td>
                     <img class="tech-icon" src="icons/css.png">
                     <!-- <h3>CSS</h3> -->
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
-                <div class="icon-box">
+                </td>
+                <td>
                     <img class="tech-icon" src="icons/java-script.png">
                     <!-- <h3>JavaScript</h3> -->
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
-                <div class="icon-box">
+                </td>
+              </tr>
+              <tr>
+                <td>
                     <img class="tech-icon" src="icons/git.png">
                     <!-- <h3>VCS</h3> -->
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
-                <div class="icon-box">
+                </td>
+                <td>
                     <img class="tech-icon" src="icons/linux.png">
                     <!-- <h3>Linux</h3> -->
-                </div>
-            </div>
-
-        </div>
+                </td>
+                <td>
+                    <img class="tech-icon" src="icons/sql.jpg">
+                    <!-- <h3>Linux</h3> -->
+                </td>
+              </tr>
+            </tbody>
+          </table>
+            </div></div>
     </div>
     <section class="projects" id="prj">
         <div class="container-fluid">
@@ -251,7 +249,7 @@
                     
                 </div>
                 <div class="col-lg-12">
-                    <p>Copyright © 2021 Siddharth Singh. All rights reserved</p>
+                    <p>Copyright © 2023 Siddharth Singh. All rights reserved</p>
                 </div>
             </div>
         </div>
