--- a/index.html
+++ b/index.html
@@ -292,9 +292,9 @@
                 <div class="col-lg-12">
                     <a href="https://www.facebook.com/people/Siddharth-Singh/100041000264340/" target="blank"><i
                             class="fa fa-facebook"></i></a>
-                    <a href="https://www.instagram.com/s01101001d/" target="blank"><i class="fa fa-instagram"></i></a>
+                    <a href="https://www.instagram.com/singh.siddharth01/" target="blank"><i class="fa fa-instagram"></i></a>
 
-                    <a href="https://www.linkedin.com/in/siddharth-singh0801/" target="blank"><i
+                    <a href="https://www.linkedin.com/in/siddharth0801/" target="blank"><i
                             class="fa fa-linkedin"></i></a>
                     <a href="https://github.com/siddharth0801" target="blank"><i class="fa fa-github"></i></a>
 
